------------------------------------------------------------------------
r669 | anrdaemon | 2017-06-22 18:52:05 +0300 (Чт, 22 июн 2017) | 2 lines

+ Encapsulate link composition.

------------------------------------------------------------------------