@@ -1,6 +1,11 @@
 ------------------------------------------------------------------------
-r669 | anrdaemon | 2017-06-22 18:52:05 +0300 (Чт, 22 июн 2017) | 2 lines
+r671 | anrdaemon | 2017-06-23 22:49:17 +0300 (Пт, 23 июн 2017) | 2 lines
 
-+ Encapsulate link composition.
+* Tweak thumbnail image dimensions calculation.
+
+------------------------------------------------------------------------
+r670 | anrdaemon | 2017-06-23 22:38:51 +0300 (Пт, 23 июн 2017) | 2 lines
+
++ GD2 support for thumbnail images.
 
 ------------------------------------------------------------------------
